--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,8 @@ flutter:
     - assets/images/rcb.png
     - assets/images/kxi.png
     - assets/images/lsg.png
+    - assets/images/background1.jpg
+   
 
 
    
